# GraFT

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: keep-deployed-app-alive.yml  python-app.yml
Article/: README.md
Article/code/Mariana/: assortativity_density.py  boxplots_4groups_stat.py  run.py  timeseries.py
Article/code/Nikon/: angle_latb.py  assortativity_DMSO.py  assortativity_latb.py  boxplots_DMSO_stat.py  boxplots_dark_stat.py  boxplots_light_stat.py  run_dark.py  run_light.py  run_vf.py  timeseries_DMSO.py  timeseries_dark.py  timeseries_light.py
Article/code/len_update2025/: merged_data_test_length_distribution.py
Article/code/synthetic_data/: dataUtils.py
GraFT/: run.py  run_cli.py  utilsF.py
GraFT/still/: traced_filaments_info.csv
GraFT/timeseries/: tagged_graph.gpickle  tracked_filaments_info.csv  value_per_frame.csv
graft/: cli.py  example_run.py  main.py  run.py  run_cli.py  streamlit_app.py
src/: utilsF.py
src/graft/: cli.py  example_run.py  main.py  node_condense.py  streamlit_app.py  utilsF.py  utilsF_performance.py
src/graft/data/: still_image.tif
tests/: __init__.py  test_create_all.py  test_create_all_still.py  test_node_condense.py  test_regression.py
tests/expected_output/: tagged_graph.gpickle  tracked_filaments_info.csv  value_per_frame.csv
tests/expected_output/create_all/: posL.gpickle
tests/expected_output/create_all_still/: traced_filaments_info.csv
tests/expected_output/node_condense/: input_1.pickle  input_2.pickle  input_3.pickle  input_4.pickle  input_5.pickle  input_6.pickle  output_1.pickle  output_2.pickle  output_3.pickle  output_4.pickle  output_5.pickle  output_6.pickle
tests/expected_output/node_condense_sparse/: input_1.pickle  input_2.pickle  input_3.pickle  input_4.pickle  input_5.pickle  input_6.pickle  output_1.pickle  output_2.pickle  output_3.pickle  (+3 more)
(+130 files in other folders)
